<resources>
    <string name="app_name">SakuraBoutique</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tbtitle">Home Page</string>
    <string name="tv_selectsize">Select Size (US)</string>
    <string name="tv_selectcolor">Select Color</string>
    <string name="tv_selectquantity">Select How Many Quantity:</string>
    <string name="tv_stockquantity">Availability :</string>
    <string name="tv_stock">In Stock(20)</string>
    <string name="tv_productiondescriptionlabel">Product Description :</string>
    <string name="tv_productdescription">This Product is Nice, and have many more colors and sizes. Make up of Fibers, so it\'s feel cool especially suitable for the hot weather. blah blah blah blah blah blah</string>
    <string name="tv_addtocart">Add To Cart</string>
    <string name="btn_addtocart">Add to Cart</string>
    <string name="tv_pricedetail">Price Details :</string>
    <string name="tv_carttotallabel">Cart Total :</string>
    <string name="tv_totalquantitylabel">Total Quantity :</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_clearcart">Empty Cart</string>
    <string name="tv_emptycart"> Looks Like Your Shopping Cart is Empty, Let\'s Start Shopping Right Now !!</string>
    <string name="btn_startshopping">Start Shopping Now</string>
    <string name="tvheader">Sakura Boutique</string>
    <string name="tvaboutuslabel">About Us</string>
    <string name="tvaboutus">
        <b>1.</b> Sakura Boutique is the online shop which selling Clothes, Mainly focus on Women\'s Wears.\n\n
        <b>2.</b> There are 7 different Categories you can Browse in Sakura, (1) Tops Wears, (2) Bottoms Wears, (3) Dresses, (4) Traditional Burmese Dresses, (5) Shoes and Bags, (6) Accessories, (7) Men\'s Wears.\n\n
        <b>3.</b> We have been here in Myanmar since 2018, and Our Products have guarantees for quality and fair price.\n\n
        <b>4.</b> The order pending time or deliver time can be up to 2 weeks, but we will deliver to your home ASAP!!.\n\n
        <b>5.</b> The Average Deliver fees is 2500_3000, but can different depending upon your deliver address.\n\n
        <b>6.</b> We will contact you for confirmation of delivery charges as soon as we received your orders.\n\n
        <b>5.</b> Our mission is to bring ease of use and comfortable for the users. Please also check our Facebook Page. Thank you for your support. XOXO!!\n
    </string>
    <string name="tvcontactus">Contact Us</string>
    <string name="tvrateourapp">Rate Our App</string>
    <string name="tvshareourapp">Share Our App</string>
    <string name="tvfindusonfacebook">Find Us on Facebook</string>
    <string name="tvmail">snowcat018@gmail.com</string>
    <string name="tvphone">+95-9979044627</string>
    <string name="tvlocation"><u>no.53 21st Street, Yangon,4th floor</u></string>
    <string name="tvfblink">https://www.facebook.com/Sakura-Boutique-433408814113660/</string>
    <string name="tietusername">UserName</string>
    <string name="tietpassword">Password</string>
    <string name="btn_Login">Login</string>
    <string name="tvlabel">Don\'t have an account ?</string>
    <string name="btnregister">Register Now</string>
    <string name="tvlabel2">Or you can</string>
    <string name="btnsigninasguest">Sign In As Guest</string>
    <string name="tvlabel3">Having Trouble Signing In ?</string>
    <string name="btnresetpassword">Reset Password</string>
    <string name="btnsignup">Sign Up</string>
    <string name="tvlabel1">By creating an account, you agree to our</string>
    <string name="btnterms">term of service</string>
    <string name="btnprivacy">Privacy Policy</string>
    <string name="tvpolicy">
        <u><b>1. Terms and conditions</b></u>\n\n
        These terms and conditions (\"Terms\", \"Agreement\") are an agreement between Mobile Application Developer (\"Mobile Application Developer\", \"us\", \"we\" or \"our\") and you (\"User\", \"you\" or \"your\"). This Agreement sets forth the general terms and conditions of your use of the com.example.SakuraBoutique mobile application and any of its products or services (collectively, \"Mobile Application\" or \"Services\").\n\n
        <u><b>2. Accounts and membership</b></u>\n\n
        If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration.\n\n
        <u><b>3. Backups</b></u>\n\n
        We are not responsible for Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available.\n\n
        <u><b>4. Links to other mobile applications</b></u>\n\n
        Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.\n\n
        <u><b>5. Intellectual property rights</b></u>\n\n
        This Agreement does not transfer to you any intellectual property owned by Mobile Application Developer or third-parties, and all rights, titles, and interests in and to such property will remain (as between the parties) solely with Mobile Application Developer. All trademarks, service marks, graphics and logos used in connection with our Mobile Application or Services, are trademarks or registered trademarks of Mobile Application Developer or Mobile Application Developer licensors. Other trademarks, service marks, graphics and logos used in connection with our Mobile Application or Services may be the trademarks of other third-parties. Your use of our Mobile Application and Services grants you no right or license to reproduce or otherwise use any Mobile Application Developer or third-party trademarks.\n\n
        <u><b>6. Severability</b></u>\n\n
        All rights and restrictions contained in this Agreement may be exercised and shall be applicable and binding only to the extent that they do not violate any applicable laws and are intended to be limited to the extent necessary so that they will not render this Agreement illegal, invalid or unenforceable. If any provision or portion of any provision of this Agreement shall be held to be illegal, invalid or unenforceable by a court of competent jurisdiction, it is the intention of the parties that the remaining provisions or portions thereof shall constitute their agreement with respect to the subject matter hereof, and all such remaining provisions or portions thereof shall remain in full force and effect.\n\n
        <u><b>7. Changes and amendments</b></u>\n\n
        We reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will send you an email to notify you. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Policy was created with https://www.WebsitePolicies.com  Acceptance of these terms  You acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services.\n\n
        <u><b>8. Contacting us</b></u>\n\n
        If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may send an email to snowcat018@gmail.com  This document was last updated on December 2, 2019\n\n</string>
    <string name="btnconfirmorder">Confirm Order</string>
    <string name="tvsuccessmessage">
        <b><font size="25"><center>Your Order Was Successfully!!</center></font></b>\n\n
        Thank You So Much For Shopping With Us.\n
        Order Waiting Time Will Be Up To 2 Weeks.\n
        Let\'s Go Shopping Again.</string>
    <string name="btnstartshopping">Start Shopping Now</string>
</resources>
