<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AboutUs">

    <include
        android:id="@+id/tb1"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cimgLogo"

        android:layout_marginTop="64dp"
        android:src="@drawable/sakuralogo3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb1" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:fontFamily="cursive"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/tvheader"
        app:layout_constraintEnd_toEndOf="@+id/cimgLogo"
        app:layout_constraintStart_toStartOf="@+id/cimgLogo"
        app:layout_constraintTop_toBottomOf="@+id/cimgLogo" />

    <TextView
        android:id="@+id/tvAboutUsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:text="@string/tvaboutuslabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="8dp"

        android:text="@string/tvaboutus"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutUsLabel" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutUs" />
    <TextView
        android:id="@+id/tvContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvcontactus"

        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutUs" />

    <TextView
        android:id="@+id/tvRateOurApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvrateourapp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactUs"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvShareOurApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvshareourapp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRateOurApp" />
    <TextView
        android:id="@+id/tvFindUsonFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvfindusonfacebook"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShareOurApp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
