<?xml version="1.0" encoding="utf-8"?>

   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/srflRefresh"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".UI.Login">

    <include
        android:id="@+id/tbInclude"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cimgLogo"

        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbInclude" />


    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/textInputLayout5"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/cimgLogo">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietemail"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:hint="@string/tietemail" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout6"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:hint="@string/tietpassword"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_Login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigninAsGuest"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnsigninasguest"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView

        android:id="@+id/tvLabel3"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"

        android:text="@string/tvlabel3"

        app:layout_constraintEnd_toStartOf="@+id/btnResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel1" />


    <TextView
        android:id="@+id/tvLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        android:text="@string/tvlabel"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnSigninAsGuest" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSigninAsGuest" />
    <pl.droidsonroids.gif.GifImageView

        android:id="@+id/gifNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nointernetgif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbProgress"

        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnresetpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>